force-app/main/default/objects/Contact/fields/AdressProof__c.field-meta.xml
<CustomField>
    <fullName>AdressProof__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Doit dater de moins de 3 mois et ne pas être une facture mobile</inlineHelpText>
    <label>Justificatif de domicile</label>
    <type>Checkbox</type>
</CustomField>