force-app/main/default/objects/Contact/fields/associate__c.field-meta.xml
<CustomField>
    <fullName>associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associé (tech)</label>
    <referenceTo>associate__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>