force-app/main/default/objects/Contact/fields/Auth0Id__c.field-meta.xml
<CustomField>
    <fullName>Auth0Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Identifiant Auth0 du user des apps</description>
    <externalId>true</externalId>
    <label>Id auth0</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>