force-app/main/default/objects/Contact/fields/BirthPlace__c.field-meta.xml
<CustomField>
    <fullName>BirthPlace__c</fullName>
    <label>Ville de naissance</label>
    <length>45</length>
    <type>Text</type>
</CustomField>