force-app/main/default/objects/Contact/fields/ChronosId__c.field-meta.xml
<CustomField>
    <fullName>ChronosId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Identifiant unique du User dans Chronos</description>
    <externalId>true</externalId>
    <label>Id Chronos</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>