force-app/main/default/objects/Contact/fields/DateDerniereEnquete__c.field-meta.xml
<CustomField>
    <fullName>DateDerniereEnquete__c</fullName>
    <label>Date Dernière Enquête</label>
    <type>Date</type>
</CustomField>