force-app/main/default/objects/Contact/fields/GDriveId__c.field-meta.xml
<CustomField>
    <fullName>GDriveId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Hash du team drive</description>
    <label>Id GDrive</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>