force-app/main/default/objects/Contact/fields/ID_Id_Card__c.field-meta.xml
<CustomField>
    <fullName>ID_Id_Card__c</fullName>
    <label>ID de la carte d&#39;identité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>