force-app/main/default/objects/Contact/fields/IDCard__c.field-meta.xml
<CustomField>
    <fullName>IDCard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Carte d&#39;identité</description>
    <label>CNI</label>
    <type>Checkbox</type>
</CustomField>