force-app/main/default/objects/Contact/fields/IdentityProof__c.field-meta.xml
<CustomField>
    <fullName>IdentityProof__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cochée si CNI ou Passeport est cochée</description>
    <label>Pièce d&#39;identité 1</label>
    <type>Checkbox</type>
</CustomField>