force-app/main/default/objects/Contact/fields/IncomPerTranche__c.field-meta.xml
<CustomField>
    <fullName>IncomPerTranche__c</fullName>
    <label>Revenus par Tranche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 18 K€</fullName>
            </value>
            <value>
                <fullName>19 - 23 K€</fullName>
            </value>
            <value>
                <fullName>24 - 27K€</fullName>
            </value>
            <value>
                <fullName>28 - 35K€</fullName>
            </value>
            <value>
                <fullName>36 - 56K€</fullName>
            </value>
            <value>
                <fullName>57K€ ou plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>