force-app/main/default/objects/Contact/fields/IsActif__c.field-meta.xml
<CustomField>
    <fullName>IsActif__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indique si le contact est actif ou non. N&#39;est utile que pour les contacts de type EC Partenaire</description>
    <label>Est Actif</label>
    <type>Checkbox</type>
</CustomField>