force-app/main/default/objects/Contact/fields/IsConvertedByLT20__c.field-meta.xml
<CustomField>
    <fullName>IsConvertedByLT20__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cette case est récupérée depuis la lead lors de la conversion. En cas de conversion par le composant LT20, cette case vaut &quot;true&quot; et la règle de duplication ne s&#39;applique alors pas.</description>
    <label>Conversion par LT20</label>
    <type>Checkbox</type>
</CustomField>