force-app/main/default/objects/Contact/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <label>Fonction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JobTitlesList</valueSetName>
    </valueSet>
</CustomField>