force-app/main/default/objects/Contact/fields/MainContact__c.field-meta.xml
<CustomField>
    <fullName>MainContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact principal</label>
    <type>Checkbox</type>
</CustomField>