force-app/main/default/objects/Contact/fields/NativeCountry__c.field-meta.xml
<CustomField>
    <fullName>NativeCountry__c</fullName>
    <label>Pays de naissance</label>
    <length>15</length>
    <type>Text</type>
</CustomField>