force-app/main/default/objects/Contact/fields/Networth__c.field-meta.xml
<CustomField>
    <fullName>Networth__c</fullName>
    <label>Patrimoine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 2K€</fullName>
            </value>
            <value>
                <fullName>3 - 22K€</fullName>
            </value>
            <value>
                <fullName>23 - 128K€</fullName>
            </value>
            <value>
                <fullName>129 - 319K€</fullName>
            </value>
            <value>
                <fullName>420 - 464K€</fullName>
            </value>
            <value>
                <fullName>465K€ et plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>