force-app/main/default/objects/Contact/fields/NewDrivingLicence__c.field-meta.xml
<CustomField>
    <fullName>NewDrivingLicence__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nouveaux permis de conduire au format carte de crédit</description>
    <label>Permis de conduire (après 09/2013)</label>
    <type>Checkbox</type>
</CustomField>