force-app/main/default/objects/Contact/fields/numm__Type_de_contact__c.field-meta.xml
<CustomField>
    <fullName>numm__Type_de_contact__c</fullName>
    <label>Type de contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Relance</fullName>
            </value>
            <value>
                <fullName>Facturation</fullName>
            </value>
            <value>
                <fullName>Commande</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>