force-app/main/default/objects/Contact/fields/OS_Mobile__c.field-meta.xml
<CustomField>
    <fullName>OS_Mobile__c</fullName>
    <label>OS Mobile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iOS</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>