force-app/main/default/objects/Contact/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passeport</label>
    <type>Checkbox</type>
</CustomField>