force-app/main/default/objects/Contact/fields/SecondIdentityProof__c.field-meta.xml
<CustomField>
    <fullName>SecondIdentityProof__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Pièce d&#39;entité supplémentaire, cochée automatiquement CNI et passeport sont cochée ou si CNI ou passeport + permis de conduire est cochée</description>
    <label>Pièce d&#39;identité 2</label>
    <type>Checkbox</type>
</CustomField>