force-app/main/default/objects/Contact/recordTypes/Partnership.recordType-meta.xml
<RecordType>
    <fullName>Partnership</fullName>
    <active>true</active>
    <label>Partenariat</label>
</RecordType>