force-app/main/default/objects/Contact/validationRules/checkPresenceTelPrincipalOuEmail.validationRule-meta.xml
<ValidationRule>
    <fullName>checkPresenceTelPrincipalOuEmail</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.BypassValidationRules__c = false,
isblank (Email), isblank (MobilePhone)
)</errorConditionFormula>
    <errorMessage>Merci de renseigner au moins le numéro de téléphone principal ou l&#39;email.</errorMessage>
</ValidationRule>